Add header row to test file

--- a/test/test.html
+++ b/test/test.html
@@ -4,6 +4,12 @@
     <h1>Hello</h1>
     <div>world!</div>
     <table>
+      <thead>
+        <tr>
+          <th>Number</th>
+          <th>Value</th>
+        </tr>
+      </thead>
       <tbody>
         <tr>
           <td>1</td>
